# adapta-gtk-theme

./: .gitignore  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md
extra/: Makefile.am
extra/chrome/adapta-nokto-theme/: manifest.json
extra/chrome/adapta-theme/: manifest.json
extra/gedit/: README.md  adapta.xml
extra/plank/: dock.theme
extra/telegram/dark/: colors.tdesktop-theme
extra/telegram/light/: colors.tdesktop-theme
extra/tweetdeck/: recolor-cdk.sh
extra/tweetdeck/dark/: ColorDeck-adapta-nokto.cdk.in
extra/tweetdeck/light/: ColorDeck-adapta.cdk.in
gtk/: Makefile.am  index.theme  index.theme-eta  index.theme-nokto  index.theme-nokto-eta
gtk/asset/: assets-gtk2.svg.in  assets-gtk3.svg.in
gtk/asset/assets-gtk2-scripts/: clone-assets-gtk2.sh  recolor-assets-gtk2.sh  render-assets-gtk2.sh
gtk/asset/assets-gtk3-scripts/: recolor-assets-gtk3.sh  render-assets-gtk3.sh
gtk/gtk-2.0/: colors-dark.rc.in  colors.rc.in  gtkrc  gtkrc-dark  gtkrc-dark-eta  gtkrc-eta  recolor-gtk2.sh
gtk/sass/: README  compile-gresource.sh  gtk-dark-eta.gresource.xml.in  gtk-dark.gresource.xml.in  gtk-eta.gresource.xml.in  gtk.gresource.xml.in  parse-sass.sh
gtk/sass/common/: _colors.scss  _drawing.scss
m4/: adapta-color-scheme.m4  adapta-gnome.m4  adapta-option.m4
shell/: Makefile.am
shell/asset/: clone-assets-cinnamon.sh  clone-assets-gnome-shell.sh  clone-assets-xfce.sh  render-assets-cinnamon-thumb.sh
shell/asset/assets-cinnamon/light/misc/: thumbnail.svg.in
shell/asset/assets-cinnamon/nokto/misc/: thumbnail.svg.in
shell/gnome-shell/extensions/window-list/: README
shell/sass/: README  compile-gresource.sh  parse-sass.sh
shell/sass/common/: _colors.scss  _drawing.scss
shell/xfce-notify-4.0/: gtkrc
wm/: Makefile.am
wm/asset/assets-metacity-scripts/: clone-assets-metacity.sh  render-assets-metacity.sh
wm/asset/assets-openbox-scripts/: clone-assets-openbox.sh
wm/asset/assets-xfwm/: close-prelight.svg.in  close-pressed.svg.in
wm/asset/assets-xfwm-scripts/: recolor-assets-xfwm.sh  render-assets-xfwm.sh
wm/metacity-1/: metacity-theme-2.xml  metacity-theme-3.xml
wm/openbox-3/: compton.conf  themerc  themerc-nokto
